# node-scraper

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CONTRIBUITING.md  CONTRIBUTING.md  Dockerfile  EXTENDING.md  LICENSE  README.md  SECURITY.md  dev-setup.sh  pyproject.toml  setup.py
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: plugin_convention_warnings.py
.github/workflows/: code_quality_checks.yml  functional-test.yml  release-trusted-publisher.yml  unit-test.yml  update-plugin-docs.yml
config/: redfish_events_daemon.example.json
docs/: PLUGINS.md  PLUGIN_DOC.md  REDFISH_EVENTS_DAEMON.md  THP_TO_SYSFS_DESIGN_PROPOSAL.md  generate_plugin_doc_bundle.py
docs/node-scraper-external/: README.md  pyproject.toml
errorscraper/: cli.py  configbuilder.py  configregistry.py  constants.py  generictypes.py  pluginexecutor.py  pluginregistry.py  types.py  typeutils.py  utils.py
errorscraper/base/: __init__.py  inbandcollectortask.py  inbanddataplugin.py  regexanalyzer.py
errorscraper/cli/: cli.py  constants.py  dynamicparserbuilder.py  inputargtypes.py
errorscraper/configs/: system_config.json
errorscraper/enums/: __init__.py  eventcategory.py  eventpriority.py  executionstatus.py  osfamily.py  systeminteraction.py  systemlocation.py
errorscraper/hooks/: filesystemloghook.py
errorscraper/interfaces/: __init__.py  connectionmanager.py  dataanalyzertask.py  datacollectortask.py  dataplugin.py  inbandcollectortask.py  inbanddataplugin.py  plugin.py  resultcollator.py  task.py  taskhook.py  taskresulthook.py
errorscraper/models/: __init__.py  connectionconfig.py  datamodel.py  datapluginresult.py  event.py  pluginconfig.py  pluginresult.py  systeminfo.py  taskresult.py  timerangeargs.py
errorscraper/resultcollators/: tablesummary.py
errorscraper/taskresulthooks/: filesystemloghook.py
nodescraper/: __init__.py  cli_connection_profile.py  command_artifact_html.py  configbuilder.py  configregistry.py  constants.py  exporter.py  generictypes.py  plugin_entrypoints.py  pluginexecutor.py  pluginregistry.py  regex_patterns.py  serialization.py  typeutils.py  utils.py
nodescraper/base/: __init__.py  inbandcollectortask.py  inbanddataplugin.py  match_ignore.py  oobanddataplugin.py  oobsshdataplugin.py  redfishcollectortask.py  regexanalyzer.py
nodescraper/cli/: __init__.py  app.py  cli.py  common_args.py  compare_runs.py  daemon_cmd.py  dynamicparserbuilder.py  embed.py  extension.py  helper.py  host_cli_embed.py  host_integration.py  host_namespace.py  inputargtypes.py  invocation.py  main.py  prefer_distribution_extension.py  run_plugins_parser.py
nodescraper/connection_profile/: __init__.py  loader.py  registry.py
nodescraper/enums/: __init__.py  eventcategory.py  osfamily.py  taskstate.py
nodescraper/helpers/: __init__.py  dmesg_compare.py
nodescraper/interfaces/: __init__.py  analyzerargs.py  connectionmanager.py  dataanalyzertask.py  datacollectortask.py  dataplugin.py  plugin.py  task.py
nodescraper/models/: __init__.py  analyzerargs.py  collectorargs.py  datamodel.py  event.py  pluginconfig.py  pluginresult.py  priority_override.py  systeminfo.py  taskresult.py  timerangeargs.py
nodescraper/pluginrecipe/: __init__.py  ai_workload_node_status.py  ai_workloads_node_status.py  all_inband_plugins.py  all_outofband_plugins.py  all_plugins.py  discovery.py  node_status.py  pluginrecipe.py
nodescraper/plugins/: __init__.py
nodescraper/redfish_events/: __init__.py  client.py  config.py  daemon_config.py  daemon_http.py  daemon_runner.py  log_baseline.py  models.py  parsing.py  se_bridge.py  sse_capability.py  sse_subscriber.py  subscriber_manager.py  trigger_engine.py  webhook_subscriber.py
nodescraper/resultcollators/: htmlartifact.py  tablesummary.py
nodescraper/taskresulthooks/: filesystemloghook.py
scripts/: plugin_convention_warnings.py
test/functional/: conftest.py  test_cli_describe.py  test_cli_help.py  test_cli_no_console_log.py  test_discovery.py  test_dmesg_custom_patterns.py  test_fabrics_plugin.py  test_generic_collection_plugin.py  test_network_plugin.py  test_nic_plugin.py  test_pcie_plugin.py  test_plugin_configs.py  test_plugin_registry.py  test_rdma_plugin.py  test_redfish_endpoint_plugin.py  test_reference_config_workflow.py  test_run_plugins.py  test_sys_settings_plugin.py
test/unit/: conftest.py  instinct_shaped_engine.py  mock_python_engine.py  serviceability_dummy_data.py  test_cli.py  test_embedding_namespace.py  test_host_namespace.py  test_plugin_convention_warnings.py  test_plugin_entrypoints.py  test_pluginexecutor_quiet.py  test_pluginresult_helpers.py  test_regex_patterns.py  test_serialization.py  (+2 more)
(+529 files in other folders)
