[project]
name = "amd-node-scraper"
dynamic = ["version"]
description = "A framework for automated error detection and data collection"
authors = [{ name = "AMD" }]
readme = "README.md"
requires-python = ">=3.9"

keywords = []

classifiers = ["Topic :: Software Development"]

dependencies = [
    "pydantic>=2.8.2",
    "paramiko>=3.2.0,<4.0.0",
    "requests",
    "pytz",
    "urllib3>=2.6.0"
]

[project.optional-dependencies]
dev = [
    "build",
    "black",
    "pylint",
    "coverage",
    "twine",
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "mypy",
    "types-paramiko",
    "types-setuptools",
]

[project.urls]
homepage = "https://github.com/amd/node-scraper"
documentation = "https://github.com/amd/node-scraper"
repository = "https://github.com/amd/node-scraper"

[build-system]
requires = ["setuptools==78.1.1", "setuptools-scm==8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['nodescraper']

[tool.setuptools]
include-package-data = true

[project.scripts]
node-scraper = "nodescraper.cli:cli_entry"

[project.entry-points."nodescraper.plugin_configs"]
NodeStatus = "nodescraper.pluginrecipe.node_status:NodeStatus"
AllPlugins = "nodescraper.pluginrecipe.all_plugins:AllPlugins"

[tool.black]
line-length = 100
target_version = ['py39']

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = ["F", "B", "T20", "N", "W", "I", "E"]
ignore = ["E501", "N806"]

[tool.mypy]
python_version = "3.9"
mypy_path = ["test/unit"]

[tool.setuptools_scm]
version_scheme = "post-release"
